@@ -53,7 +53,7 @@
     - if merge_request.labels.any?
       &nbsp;
       - merge_request.labels.each do |label|
-        = link_to_label(label, project: merge_request.project)
+        = link_to_label(label, project: merge_request.project, type: 'merge_request')
     - if merge_request.tasks?
       &nbsp;
       %span.task-status
