@@ -13,6 +13,7 @@ v 8.5.0 (unreleased)
     set it up
   - Fix diff comments loaded by AJAX to load comment with diff in discussion tab
   - Whitelist raw "abbr" elements when parsing Markdown (Benedict Etzel)
+  - Fix label links for a merge request pointing to issues list
   - Don't vendor minified JS
   - Display 404 error on group not found
   - Track project import failure
